@@ -1,3 +1,13 @@
+2006-06-08  Jeff Johnston  <jjohnstn@redhat.com>
+
+	Sync from gcc:
+
+	2005-01-12  David Edelsohn  <edelsohn@gnu.org>
+	            Andreas Schwab  <schwab@suse.de>
+
+	PR bootstrap/18033
+	* config-ml.in: Eval option if surrounded by single quotes.
+
 2006-06-07  Carlos O'Donell  <carlos@codesourcery.com>
 
 	Sync from gcc:
